    events.

    All the example programs have been ported over from being based on
    GLUT to using osgProducer.  This allows all the examples to scale from
    running on laptops up to multiple cpu and graphics pipe systems. The
    configuration of threading and multiple camera views can all be done
    via ASCII configuration files, no need to recompile. 

    Improvemnts to the Makefle system.

    Added support for early abort of rendering, useful for interactive
    applications which occasional have rendering that takes that long
    enough (i.e. several second) that end users may wish to abort 
    during the drawing.

    Improved thread safety when working multipipe systems.

    New MD2 plugin which allows Quake animated characters to be loaded
    into the OSG.
    
    New DDS plugin for loading compressed and non-compressed images.

    Completely new osgText implemention which is simpler to use, faster, and
    thread safe.  Support for high quality true type fonts has now been moved
    to a freetype plugin which is dynamically loaded on demand, with the
    core osgText library providing a default font when the plugin is
    unavailable.  Moving the freetype dependancy out of the osgText allows
    the text library to be just dependant on OpenGL and Standard C++ like
    the rest of the core libraries, virtual of this osgText now compiles 
    by default on platforms.
    
    Automatic subloading of textures when images are updated.
    
    New database cache in the osgDB library.
    
    Clean up of memory management in the OpenFlight loader.


24th January 2003 - OpenSceneGraph-0.9.3.tar.gz

    >>> adds support navigational light points, multi-threaded dynamic
    >>> paging of Terrapage databases, ARB_vertex_program extension, 
    >>> DirectD .x model loader, and integration with OpenProducer for 
    >>> multi-threaded, multi-window/pipe rendering.

    Added osgProducer library which integrates the OpenSceneGraph seemlessly